[project]
name = "many-model-forecasting"
version = "0.1.0"
description = "Train one scikit-learn model per SKU using Spark or Ray on Databricks, with pickle-bundle MLflow logging"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
  "mlflow>=2.15",
  "scikit-learn>=1.5",
  "pandas>=2.1",
  "numpy>=1.26",
]

[project.optional-dependencies]
ray = [
  "ray[data]>=2.37",
  "optuna>=3.6",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
